--- a/assets/sass/layout/_bg.scss
+++ b/assets/sass/layout/_bg.scss
@@ -96,14 +96,16 @@
 		position: relative;
 
 		@media (max-width: 768px) {
-			display: block;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 
 		.menu-icon {
 			display: block;
 			width: 24px;
 			height: 2px;
-			background: #fff;
+			background: var(--text-color, #fff);
 			position: relative;
 			transition: background 0.2s ease;
 
@@ -114,7 +116,7 @@
 				left: 0;
 				width: 100%;
 				height: 2px;
-				background: #fff;
+				background: var(--text-color, #fff);
 				transition: transform 0.2s ease;
 			}
 
