--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ body {
   font-weight: bold;
   background: linear-gradient(to right, var(--color-text), var(--color-cyan));
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   text-decoration: none;
 }
