--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,10 @@
 /* Error: Undefined mixin.
  *    ,
- * 10 |         @include vendor('transform', 'scale(1.0)');
- *    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ * 14 |         @include vendor('appearance', 'none');
+ *    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  *    '
- *   assets/sass/layout/_bg.scss 10:3  @import
- *   assets/sass/main.scss 5:9         root stylesheet */
+ *   assets/sass/components/_button.scss 14:3  @import
+ *   assets/sass/main.scss 5:9                 root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a    \2577 \a 10 \2502          @include vendor('transform', 'scale(1.0)');\a    \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   assets/sass/layout/_bg.scss 10:3  @import\a   assets/sass/main.scss 5:9         root stylesheet";
+  content: "Error: Undefined mixin.\a    \2577 \a 14 \2502          @include vendor('appearance', 'none');\d\a    \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   assets/sass/components/_button.scss 14:3  @import\a   assets/sass/main.scss 5:9                 root stylesheet";
 }
