--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -1,4 +1,3 @@
-@import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
 @import 'libs/skel';
@@ -8,6 +7,31 @@
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
+
+/* IE9 Specific Styles */
+body {
+	background-color: var(--color-bg);
+}
+
+.header {
+	background: #0a0c17;
+}
+
+.main-nav {
+	@media (max-width: 640px) {
+		background: #0a0c17;
+	}
+}
+
+.experience-card,
+.resume-summary,
+.portfolio-card {
+	background: #0a0c17;
+}
+
+.notification {
+	background: #0a0c17;
+}
 
 /* BG */
 
